@@ -80,6 +80,8 @@ Bugs fixed
 * #8067: autodoc: A typehint for the instance variable having type_comment on
   super class is not displayed
 * #8545: autodoc: a __slots__ attribute is not documented even having docstring
+* #741: autodoc: inherited-members doesn't work for instance attributes on super
+  class
 * #8477: autosummary: non utf-8 reST files are generated when template contains
   multibyte characters
 * #8501: autosummary: summary extraction splits text after "el at." unexpectedly
